# goit-python-web-hw13-people-and-quotes

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py
django_project/: urls.py
json_data/: authors.json
quotes/: models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/templatetags/: extract_tags.py
scripts/: populate_data.py
static/css/: base.css
templates/: author_detail.html  author_new.html  base.html  home.html  quote_new.html  tag_detail.html  tag_new.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
