[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2-binary = "^2.9.7"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
