[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2-binary = "^2.9.7"
environs = "^9.5.0"
django = "3.2"
gunicorn = "20.1.0"
whitenoise = "6.4.0"
dj-database-url = "^2.1.0"
dj-email-url = "^1.0.6"
click = "^8.1.7"
django-cache-url = "^3.4.4"
mypy-extensions = "^1.0.0"
platformdirs = "^3.11.0"
typing-extensions = "^4.8.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
